--- a/AutoPay.Web/Views/Shared/_SideNavPartial.cshtml
+++ b/AutoPay.Web/Views/Shared/_SideNavPartial.cshtml
@@ -27,7 +27,7 @@
                     <i class="fa fa-database"></i> <span>Remote DB Configuration</span>
                 </a>
             </li>
-            <li class="@ViewBag.NavCssChangePwd">
+            <li class="@ViewBag.NavCssChangePwd" style="display:none">
                 <a asp-action="changePassword" asp-controller="account">
                     <i class="fa fa-lock"></i> <span>Change Password</span>
                 </a>
