--- a/AutoPay.Web/Views/Batch/Manage.cshtml
+++ b/AutoPay.Web/Views/Batch/Manage.cshtml
@@ -97,7 +97,7 @@
                                                        target="_blank">
                                                         <i class="fa fa-print"></i>
                                                     </a>
-                                                    <a asp-action="detail" asp-controller="batch" asp-route-id="@b.Id" class="tool">
+                                                    <a asp-action="reopen" asp-controller="batch" asp-route-id="@b.Id" class="tool">
                                                         <i class="fa fa-history"></i>
                                                     </a>
                                                     <a asp-action="delete" asp-controller="batch" asp-route-id="@b.Id" class="tool">
