some minor fixing

--- a/AutoPay.Web/Views/Batch/Manage.cshtml
+++ b/AutoPay.Web/Views/Batch/Manage.cshtml
@@ -133,7 +133,8 @@
                     { "data": "createdOn" },
                     { "data": "updatedOn" },
                     { "data": "action", sortable: false }
-                ]
+                ],
+                aaSorting: [[4, 'desc']]
             });
         });
     </script>
