--- a/AutoPay.Web/Views/RemoteDb/Index.cshtml
+++ b/AutoPay.Web/Views/RemoteDb/Index.cshtml
@@ -43,7 +43,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">Password: *</label>
                             <div class="col-sm-6">
-                                <input type="text"
+                                <input type="password"
                                        asp-for="Password"
                                        class="form-control"
                                        maxlength="128"
